--- a/app/templates/instrutor.html
+++ b/app/templates/instrutor.html
@@ -13,10 +13,21 @@
 </div>
 <div class="body conteudo-cards">
     <div class="card">
-        <ul style="margin-top: 20px;">
-            <li>distancia</li>
-            <li>Nome</li>
-            <li>Instrumento</li>
+        <ul style="margin-top: 30px;">
+            <li>
+               <b>Nome</b><br>
+               Marconi
+            </li>
+            <li>
+                <b>Instrumento</b><br>
+                Violão
+
+            </li>
+            <li>
+                <b>Distância aproximada</b><br>
+                03 km
+
+            </li>
         </ul>
         <hr>
         <ul>
@@ -26,9 +37,20 @@
     </div>
     <div class="card">
         <ul style="margin-top: 20px;">
-            <li>distancia</li>
-            <li>Nome</li>
-            <li>Instrumento</li>
+            <li>
+                <b>Nome</b><br>
+               Marconi
+            </li>
+            <li>
+                <b>Instrumento</b><br>
+                Violão
+
+            </li>
+            <li>
+                <b>Distância aproximada</b><br>
+                03 km
+
+            </li>
         </ul>
         <hr>
         <ul>
@@ -38,9 +60,20 @@
     </div>
     <div class="card">
         <ul style="margin-top: 20px;">
-            <li>distancia</li>
-            <li>Nome</li>
-            <li>Instrumento</li>
+            <li>
+                <b>Nome</b><br>
+               Marconi
+            </li>
+            <li>
+                <b>Instrumento</b><br>
+                Violão
+
+            </li>
+            <li>
+                <b>Distância aproximada</b><br>
+                03 km
+
+            </li>
         </ul>
         <hr>
         <ul>
@@ -50,9 +83,20 @@
     </div>
     <div class="card">
         <ul style="margin-top: 20px;">
-            <li>distancia</li>
-            <li>Nome</li>
-            <li>Instrumento</li>
+            <li>
+                <b>Nome</b><br>
+               Marconi
+            </li>
+            <li>
+                <b>Instrumento</b><br>
+                Violão
+
+            </li>
+            <li>
+                <b>Distância aproximada</b><br>
+                03 km
+
+            </li>
         </ul>
         <hr>
         <ul>
