Aff nessa função viu

--- a/app/templates/instrutor.html
+++ b/app/templates/instrutor.html
@@ -14,96 +14,43 @@
 <div class="body conteudo-cards">
     <div class="card">
         <ul style="margin-top: 30px;">
-            <li>
-               <b>Nome</b><br>
-               Marconi
-            </li>
-            <li>
-                <b>Instrumento</b><br>
-                Violão
+            
+            <li><b>Nome</b></li>            
+            <li><b>Instrumento</b></li>
+            <li><b>Distância</b></li>
 
-            </li>
-            <li>
-                <b>Distância aproximada</b><br>
-                03 km
-
-            </li>
+        </ul>
+        <ul>
+            <li>Fulaninho</li>
+            <li>TocaToca</li>
+            <li>Leguas</li>
         </ul>
         <hr>
-        <ul>
-            <li><input type="reset" value="Disponivel"></li>
+        <ul> 
+            <li><input type="button" value="Solicitar Contato"></li>
             <li><input type="reset" value="Contato"></li>
         </ul>
     </div>
     <div class="card">
-        <ul style="margin-top: 20px;">
-            <li>
-                <b>Nome</b><br>
-               Marconi
-            </li>
-            <li>
-                <b>Instrumento</b><br>
-                Violão
+        <ul style="margin-top: 30px;">
+            
+            <li><b>Nome</b></li>            
+            <li><b>Instrumento</b></li>
+            <li><b>Distância</b></li>
 
-            </li>
-            <li>
-                <b>Distância aproximada</b><br>
-                03 km
-
-            </li>
+        </ul>
+        <ul>
+            <li>Fulaninho</li>
+            <li>TocaToca</li>
+            <li>Leguas</li>
         </ul>
         <hr>
         <ul>
-            <li><input type="reset" value="Disponivel"></li>
+            <li><input type="button" value="Solicitar Contato"></li>
             <li><input type="reset" value="Contato"></li>
         </ul>
     </div>
-    <div class="card">
-        <ul style="margin-top: 20px;">
-            <li>
-                <b>Nome</b><br>
-               Marconi
-            </li>
-            <li>
-                <b>Instrumento</b><br>
-                Violão
-
-            </li>
-            <li>
-                <b>Distância aproximada</b><br>
-                03 km
-
-            </li>
-        </ul>
-        <hr>
-        <ul>
-            <li><input type="reset" value="Disponivel"></li>
-            <li><input type="reset" value="Contato"></li>
-        </ul>
-    </div>
-    <div class="card">
-        <ul style="margin-top: 20px;">
-            <li>
-                <b>Nome</b><br>
-               Marconi
-            </li>
-            <li>
-                <b>Instrumento</b><br>
-                Violão
-
-            </li>
-            <li>
-                <b>Distância aproximada</b><br>
-                03 km
-
-            </li>
-        </ul>
-        <hr>
-        <ul>
-            <li><input type="reset" value="Disponivel"></li>
-            <li><input type="reset" value="Contato"></li>
-        </ul>
-    </div>
+   
 </div>
 
 
