--- a/app/templates/instrutor.html
+++ b/app/templates/instrutor.html
@@ -10,6 +10,7 @@
 
 <div class="titulo-isntrutor">
     <h1>Instrutores</h1>
+    {{ instrumentos.instrumento }}
 </div>
 <div class="body conteudo-cards">
     <div class="card">
