To com dificuldades man

--- a/app/templates/perfil_usuario.html
+++ b/app/templates/perfil_usuario.html
@@ -25,44 +25,25 @@
     <div class="alinhamento">
         <div class="forms">
 
-            <form> 
+            <form action="#"> 
                 <legend>Form title</legend>
                 <div class="form-group">
-                    {{ usuario.name.label }}
-                    {{ usuario.name(class="form-control") }}
+                    {{ form.name.label }}
+                    {{ form.name(class="form-control") }}
 
-                    {{ usuario.endereco.label }}
-                    {{ usuario.endereco(class="form-control") }}
-
-                    {{ form.sobre_mim.label }}
-                    {{ form.sobre_mim(class="form-control") }}
+                    {{ form.endereco.label }}
+                    {{ form.endereco(class="form-control") }}
                 </div>
-
-                <hr>
-
-                <h3>Adicionar Instrumento</h3>
-
-                <br>
-
-                <label for="">Selecionar Instrumento</label>
-                <div class="btn-group" role="group">
-                    {{ usuario.instrumento }}
-                </div>
-                <div>
-                    {{ usuario.nivel_conhecimento.label }}
-                    {{ usuario.nivel_conhecimento }}
-
-                    <br><br>
-                    
-                    <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                        <div class="btn-group" role="group">
-                            <button type="submit" class="btn btn-default">Adicionar</button>
-                        </div>
-
-                        <div class="btn-group" role="group">
-                            <button type="button" class="btn btn-default">Cancelar</button>
-                        </div>
+                
+                <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                    <div class="btn-group" role="group">
+                        <button type="submit" class="btn btn-default">Adicionar</button>
                     </div>
+
+                    <div class="btn-group" role="group">
+                        <button type="button" class="btn btn-default">Cancelar</button>
+                    </div>
+                </div>
             </form>
 
         </div>
