Mexendo ainda no frontend

--- a/app/templates/autenticacao/cadastro.html
+++ b/app/templates/autenticacao/cadastro.html
@@ -4,10 +4,14 @@
 {% block title %}ldMusic - perfil_instrutor{% endblock %}
 
 {% block page_content %}
+
 <div class="page-header">
-    <h1>Cadastrar</h1>
+    <h1>Cadastrar Aluno</h1>
 </div>
 <div class="col-md-4">
     {{ wtf.quick_form(form) }}
+</div>
+<div class="col-sm-8 mb-4" align = "right">
+    <a href=""><img src="../static/images/1476.jpg" width="490px"></a>
 </div>
 {% endblock %}
