--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -50,7 +50,7 @@
                 </li>
                 {% else %}
                 <li><a href="{{ url_for('autenticacao.login') }}">Entrar</a></li>
-                <li><a href="{{ url_for('autenticacao.cadastro') }}">Cadastrar</a></li>
+                <li><a href="/perfil/">Cadastrar</a></li>
                 {% endif %}
             </ul>
         </div>
