--- a/app/templates/perfil.html
+++ b/app/templates/perfil.html
@@ -5,14 +5,15 @@
 {% block title %}ldMusic{% endblock %}
 {% block content %}
 
-<div class="perfil-imagens">
+<div class="perfil-imagens" align = "center">
     <div class="aluno">
-        <h1>Aluno</h1>
-        <a href="{{ url_for('autenticacao.cadastro') }}"><img src="../static/images/aluno.png" width="400px"></a>
+        <h1><b>Aluno</h1>
+        <a href="{{ url_for('autenticacao.cadastro') }}"><img src="../static/images/aluno1.png" width="260px"></a>
     </div>
+    
     <div class="instrutor">
-        <h1>Instrutor</h1>
-        <a href=""><img src="../static/images/instrutor.png" width="490px"></a>
+        <h1><b>Instrutor</h1>
+        <a href=""><img src="../static/images/instrutor2.png" width="500px"></a>
     </div>
 </div>
 
