--- a/app/templates/autenticacao/cadastro.html
+++ b/app/templates/autenticacao/cadastro.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}ldMusic - perfil_instrutor{% endblock %}
+{% block title %}ldMusic - Cadastro{% endblock %}
 
 {% block page_content %}
 
