--- a/app/templates/perfil_usuario.html
+++ b/app/templates/perfil_usuario.html
@@ -25,28 +25,31 @@
     <div class="alinhamento">
         <div class="forms">
 
-            <form action="#"> 
+            <form>
                 <legend>Form title</legend>
                 <div class="form-group">
                     {{ form.name.label }}
                     {{ form.name(class="form-control") }}
-
+                    
                     {{ form.endereco.label }}
                     {{ form.endereco(class="form-control") }}
+                    
                 </div>
-                
-                <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                    <div class="btn-group" role="group">
-                        <button type="submit" class="btn btn-default">Adicionar</button>
-                    </div>
-
-                    <div class="btn-group" role="group">
-                        <button type="button" class="btn btn-default">Cancelar</button>
-                    </div>
-                </div>
+                <hr>
             </form>
-
+            <br>
+            <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                <div class="btn-group" role="group">
+                  <button type="button" class="btn btn-default">Adicionar</button>
+                </div>
+              
+                <div class="btn-group" role="group">
+                  <button type="button" class="btn btn-default">Cancelar</button>
+                </div>
+              </div>
+           
         </div>
+
     </div>
 </div>
 </div>
