--- a/app/templates/instrutor.html
+++ b/app/templates/instrutor.html
@@ -8,8 +8,8 @@
 {% endblock  %}
 {% block content %}
 
-<div class="titulo-isntrutor">
-    <h1>Instrutores</h1>
+<div class="titulo-instrutor">
+    <h1>Instrutores</h1>  
     {{ instrumentos.instrumento }}
 </div>
 <div class="body conteudo-cards">
