correções e urlVideo no model

--- a/app/templates/usuario.html
+++ b/app/templates/usuario.html
@@ -17,6 +17,7 @@
             <div class="video-flex">
                 {% if usuario.urlVideo %}
                 <iframe width="560" height="315" src="{{ usuario.urlVideo }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                {% endif %}
             </div>
             <div>
                 <h3>Sobre mim</h3>
